--- a/index.html
+++ b/index.html
@@ -15,12 +15,26 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-4 bg-danger">
-                1
+                <div class="row">
+                    <div class="col-12">
+                        <div class="layer1">
+                            <a href="#"><img src="/1-15791579653801179133828.png" alt=""></a>
+                            <div class="text1 liststyle-none">
+                                <h5>My skills</h5>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>Javascrispt</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-4 bg-dark">
+            <div class="col-4 ">
                 2
             </div>
-            <div class="col-4 bg-warning">
+            <div class="col-4 ">
                 3
             </div>
         </div>
