--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                     <div class="col-12">
                         <div class="layer1">
                             <a href="#"><img src="/1-15791579653801179133828.png" alt=""></a>
-                            <div class="text1 liststyle-none">
+                            <div class="text1 ">
                                 <h5>My skills</h5>
-                                <ul>
+                                <ul class="list-unstyled">
                                     <li>HTML</li>
                                     <li>CSS</li>
                                     <li>Javascrispt</li>
@@ -32,7 +32,11 @@
                 </div>
             </div>
             <div class="col-4 ">
-                2
+                <div class="row">
+                    <div class="main align-content-center">
+                        asdas
+                    </div>
+                </div>
             </div>
             <div class="col-4 ">
                 3
