--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <div class="col-12">
                         <div class="layer1">
                             <a href="#"><img src="/1-15791579653801179133828.png" alt=""></a>
+                            <a href="#"><img src="/1-15791579653801179133828.png" alt=""></a>
                             <div class="text1 ">
                                 <h5>My skills</h5>
                                 <ul class="list-unstyled">
@@ -33,8 +34,8 @@
             </div>
             <div class="col-4 ">
                 <div class="row">
-                    <div class="main align-content-center">
-                        asdas
+                    <div class="col-4 ">
+                        <a href="#"><img src="hinh-avata-chibi-de-thuong-cute-13.jpg" alt=""></a>
                     </div>
                 </div>
             </div>
