--- a/final project/index.html
+++ b/final project/index.html
@@ -76,8 +76,9 @@
         <div class="row">
             <div class="col-2">
                 <a href="#"><img class="icon" src="img/icons8-razer-64.png" alt=""></a>
+                <span>gearShop</span>
             </div>
-            <div class="col-6 ">
+            <div class="col-8 ">
                <nav class="navbar navbar-expand-sm navbar-light ">
                    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                        aria-expanded="false" aria-label="Toggle navigation">
@@ -198,11 +199,17 @@
                              </div>
                         </li>
                        </ul>
+                       <form class="form-inline  ">
+                        <input class="form-control ml-auto p-2 " type="text" placeholder="Search">
+                        <button class="btn btn-outline-light ml-auto p-2 " type="submit">Search</button>
+                    </form>
                    </div>
-               </nav>
+               </nav>   
+               </div>
             </div>
             
         </div>
     </div>
+    
 </body>
 </html>
