update button signin

--- a/final project/index.html
+++ b/final project/index.html
@@ -201,14 +201,12 @@
                              </div>
                         </li>
                        </ul>
-                      
-                       <div class="form">
-                        <button type="button" class="btn btn-outline-light">Sign Up</button>
-                        <button type="button" class="btn btn-outline-light">Regiter</button>
+                       <div class="formSignin">
+                        <button type="button" class="btnSignin">Sign in</button>
                        </div>
                                <form class="form-inline search">
                                    <input class="form-control" type="text" placeholder="Search">
-                                   <button class="btn btn-outline-light" type="submit">Search</button>
+                                   <button class="btn btn-outline-light " type="submit">Search</button>
                                </form>
                            </div>
                        </nav>
@@ -218,6 +216,7 @@
             </div>
         </div>
     </div>
+
    
 </body>
 </html>
