update sign in button

--- a/final project/index.html
+++ b/final project/index.html
@@ -201,9 +201,9 @@
                              </div>
                         </li>
                        </ul>
-                       <div class="formSignin">
+                      <form class="formSignin">
                         <button type="button" class="btnSignin">Sign in</button>
-                       </div>
+                      </form>
                                <form class="form-inline search">
                                    <input class="form-control" type="text" placeholder="Search">
                                    <button class="btn btn-outline-light " type="submit">Search</button>
