update menu and add first content

--- a/final project/index.html
+++ b/final project/index.html
@@ -121,7 +121,7 @@
                                 </div>
                            </li>
                            <li class="nav-item subMenu">
-                            <a class="nav-link text-dark " href="#">Mouse</a>
+                            <a class="nav-link text-dark " href="#">Mice</a>
                              <div class="subMenu1">
                              <div class="ssubMenu">
                                  <a href="#" class="dropdown-item">Link 1</a>
@@ -137,7 +137,7 @@
                              </div>
                         </li>
                         <li class="nav-item subMenu">
-                            <a class="nav-link text-dark " href="#">Speaker</a>
+                            <a class="nav-link text-dark " href="#">Audio</a>
                              <div class="subMenu1">
                              <div class="ssubMenu">
                                  <a href="#" class="dropdown-item">Link 1</a>
@@ -216,7 +216,82 @@
             </div>
         </div>
     </div>
-
-   
+    <div class="container">
+        <div class="mainTitle"><h1 class="title" data-text="Next-level Gaming Performance">Next-level Gaming Performance</h1></div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="product">
+                    <div class="card">
+                        <div class="imgPd">
+                             <img src="img/razer-removebg-preview.png" alt="" width="100%">
+                        </div>
+                        <div class="contentPd">
+                            <h2>Corsair Platium</h2>
+                            <div class="switch">
+                                <h3>Switch:</h3>
+                                <span>R</span>
+                                <span>B</span>
+                                <span>G</span>
+                            </div>
+                            <div class="color">
+                                <h3>color</h3>
+                                <span></span>
+                                <span></span>
+                            </div>
+                            <a href="#">Buy!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="product">
+                    <div class="card">
+                        <div class="imgPd ">
+                             <img src="img/steelseries-removebg-preview.png" alt="" width="100%">
+                        </div>
+                        <div class="contentPd">
+                            <h2>Corsair Platium</h2>
+                            <div class="switch">
+                                <h3>Switch:</h3>
+                                <span>R</span>
+                                <span>B</span>
+                                <span>G</span>
+                            </div>
+                            <div class="color">
+                                <h3>color</h3>
+                                <span></span>
+                                <span></span>
+                            </div>
+                            <a href="#">Buy!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="product">
+                    <div class="card">
+                        <div class="imgPd">
+                             <img src="img/keyboard-removebg-preview.png" alt="" width="100%">
+                        </div>
+                        <div class="contentPd">
+                            <h2>Corsair Platium</h2>
+                            <div class="switch">
+                                <h3>Switch:</h3>
+                                <span>R</span>
+                                <span>B</span>
+                                <span>G</span>
+                            </div>
+                            <div class="color">
+                                <h3>color</h3>
+                                <span></span>
+                                <span></span>
+                            </div>
+                            <a href="#">Buy!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
