--- a/index.html
+++ b/index.html
@@ -12,35 +12,22 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-4 bg-danger">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="layer1">
-                            <a href="#"><img src="/1-15791579653801179133828.png" alt=""></a>
-                            <a href="#"><img src="/1-15791579653801179133828.png" alt=""></a>
-                            <div class="text1 ">
-                                <h5>My skills</h5>
-                                <ul class="list-unstyled">
-                                    <li>HTML</li>
-                                    <li>CSS</li>
-                                    <li>Javascrispt</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <div class="information">
+        <div class="box">
+            <div class="icon">
+                <i class="fa fa-address-card" aria-hidden="true"></i>
+                <h4>Address</h4>
+                <h4>Cu chi, TP HCM, Vietnam</h4>
             </div>
-            <div class="col-4 ">
-                <div class="row">
-                    <div class="col-4 ">
-                        <a href="#"><img src="hinh-avata-chibi-de-thuong-cute-13.jpg" alt=""></a>
-                    </div>
-                </div>
+            <div class="icon">
+                <i class="fa fa-phone-square" aria-hidden="true"></i>
+                <h4>Phone number</h4>
+                <h4>+84344839079</h4>
             </div>
-            <div class="col-4 ">
-                3
+            <div class="icon">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+                <h4>Email</h4>
+                <h4>nguyennhutthien96@gmail.com</h4>
             </div>
         </div>
     </div>
