--- a/final project/index.html
+++ b/final project/index.html
@@ -17,7 +17,6 @@
             <nav class="navbar navbar-light navbar-expand-lg mainmenu ">
                 <div class="myIcon">
                     <a href="#"><img class="icon" src="img/icons8-razer-64.png" alt=""></a>
-                    <span class="brand">gearShop</span>
                 </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -137,6 +136,19 @@
             </div>
         </li>
     </ul>
+</div>
+<div class="slogan1">
+   <h3>Razer blade steath ornata chroma</h3>
+</div>
+<div class="banner">
+    <div class="contentBanner">
+    <h3>more power, more cores, more frames</h3>
+    <p>The new razer balde 15</p>
+    </div>
+    <div class="cloud">
+        <img src="img/cloud1.png" alt="animation" style="--i:1;">
+        <img src="img/cloud2.png" alt="animation" style="--i:2;">
+    </div>
 </div>
 </body>
 </html>
