fix bug animation and add content, footer

--- a/final project/index.html
+++ b/final project/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -14,7 +14,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <nav class="navbar navbar-light navbar-expand-lg mainmenu ">
+            <nav class="navbar navbar-light navbar-expand-lg mainmenu">
                 <div class="myIcon">
                     <a href="#"><img class="icon" src="img/icons8-razer-64.png" alt=""></a>
                 </div>
@@ -100,7 +100,7 @@
             </nav>
         </div>
 </div>
-<div class="slogan">
+<div class="slogan1">
     <h3>We remain committed to shipping your Razer.com orders on the next business day</h3>
 </div>
 <div class="slide-info">
@@ -149,6 +149,20 @@
         <img src="img/cloud1.png" alt="animation" style="--i:1;">
         <img src="img/cloud2.png" alt="animation" style="--i:2;">
     </div>
+</div>
+<div class="slogan1">
+    <h3>Connect with Mom by bonding over the best games and Razer gear</h3>
+ </div>
+ <div class="banner banner1">
+     <div class="contentBanner">
+     <h3>team up with mom</h3>
+     <p>The new razer balde 15</p>
+     </div>
+ </div>
+<div>
+    <footer>
+        sd
+    </footer>
 </div>
 </body>
 </html>
