--- a/final project/index.html
+++ b/final project/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <nav class="navbar navbar-light navbar-expand-lg mainmenu">
+            <nav class="navbar navbar-light navbar-expand-lg mainmenu fixed-top">
                 <div class="myIcon">
                     <a href="#"><img class="icon" src="img/icons8-razer-64.png" alt=""></a>
                 </div>
@@ -100,7 +100,7 @@
             </nav>
         </div>
 </div>
-<div class="slogan1">
+<div class="slogan1 slogan">
     <h3>We remain committed to shipping your Razer.com orders on the next business day</h3>
 </div>
 <div class="slide-info">
@@ -161,7 +161,55 @@
  </div>
 <div>
     <footer>
-        sd
+        <div class="social">
+            <ul>
+                <li>
+                    <a href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span><i class="fa fa-facebook" aria-hidden="true"></i></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span><i class="fa fa-twitter" aria-hidden="true"></i></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span><i class="fa fa-google-plus" aria-hidden="true"></i></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span><i class="fa fa-linkedin" aria-hidden="true"></i></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span><i class="fa fa-instagram" aria-hidden="true"></i></span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </footer>
 </div>
 </body>
