--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <h3>Education</h3>
                         <div class="boxxx">
                             <div class="tittle"></div>
-                            <div class="content">
+                            <div class="contentt">
                                 <p>2014-2017: Information Technology at <a href="https://www.viendong.edu.vn/" target="_blanks" title="Viendong College">Vien Dong College</a></p>
                                 <p>2020: Front-end Developer at <a href="https://nordiccoder.com/" target="_blanks" title="Nordic Coder">Nordic Coder</a></p>
                             </div>
@@ -116,7 +116,7 @@
                         <h3>Work Expericene</h3>
                         <div class="boxxx boxxx1">
                             <div class="tittle"></div>
-                            <div class="content">
+                            <div class="contentt">
                                 <p>2014-2017: Information Technology at <a href="https://www.viendong.edu.vn/" target="_blanks" title="Viendong College">Vien Dong College</a></p>
                                 <p>2020: Front-end Developer at <a href="https://nordiccoder.com/" target="_blanks" title="Nordic Coder">Nordic Coder</a></p>
                             </div>
@@ -126,7 +126,7 @@
                         <h3>Lorem ipsum dolor sit amet</h3>
                         <div class="boxxx boxxx2">
                             <div class="tittle"></div>
-                            <div class="content">
+                            <div class="contentt">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, reiciendis aperiam voluptatibus maxime doloribus tenetur iure? Saepe dolorem eveniet voluptates porro? Porro at incidunt iure aperiam aliquid repudiandae consectetur eos.</p>
                             </div>
                         </div>
